--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "sing-box version to build (e.g., v1.11.4)"
+        description: 'sing-box version (e.g., v1.11.4)'
         required: true
         type: string
 
@@ -13,94 +13,105 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [windows, linux]
-        tags: ["default", "all"]
+        os: [linux, windows]
+        tag-set: [default, all]
+        include:
+          - os: linux
+            output: sing-box
+            ext: ""
+          - os: windows
+            output: sing-box
+            ext: ".exe"
+          - tag-set: default
+            tags: "with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api"
+          - tag-set: all
+            tags: "with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api,with_v2ray_api,with_grpc"
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout sing-box
-        uses: actions/checkout@v3
-        with:
-          repository: SagerNet/sing-box
-          ref: ${{ github.event.inputs.version }}
-
-      # Step 2: Set up Go environment
-      - name: Determine Go version
-        id: go-version
-        run: |
-          if echo "${{ github.event.inputs.version }}" | grep -q 'v1.9'; then
-            echo "go_version=1.18.5" >> $GITHUB_ENV
-          elif echo "${{ github.event.inputs.version }}" | grep -q 'v1.10'; then
-            echo "go_version=1.20.0" >> $GITHUB_ENV
-          elif echo "${{ github.event.inputs.version }}" | grep -q 'v1.11'; then
-            echo "go_version=1.23.1" >> $GITHUB_ENV
-          else
-            echo "go_version=1.23.1" >> $GITHUB_ENV
-          fi
-
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.go_version }}
-
-      # Step 3: Define build tags
-      - name: Define build tags
-        id: build-tags
+          go-version: '1.23.1'
+          check-latest: true
+        
+      - name: Check out sing-box code
+        uses: actions/checkout@v4
+        with:
+          repository: 'SagerNet/sing-box'
+          ref: ${{ github.event.inputs.version }}
+          
+      - name: Parse version
+        id: parse-version
         run: |
-          if [ "${{ matrix.tags }}" == "default" ]; then
-            echo "tags=with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api" >> $GITHUB_ENV
+          VERSION="${{ github.event.inputs.version }}"
+          # Remove 'v' prefix if present
+          VERSION="${VERSION#v}"
+          MAJOR=$(echo $VERSION | cut -d. -f1)
+          MINOR=$(echo $VERSION | cut -d. -f2)
+          
+          # Determine correct Go version based on sing-box version
+          if [[ "$MAJOR" -eq 1 && "$MINOR" -ge 11 ]]; then
+            echo "go_version=1.23.1" >> $GITHUB_OUTPUT
+          elif [[ "$MAJOR" -eq 1 && "$MINOR" -eq 10 ]]; then
+            echo "go_version=1.20.0" >> $GITHUB_OUTPUT
+          elif [[ "$MAJOR" -eq 1 && "$MINOR" -eq 9 ]]; then
+            echo "go_version=1.18.5" >> $GITHUB_OUTPUT
           else
-            echo "tags=with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api,with_v2ray_api,with_grpc" >> $GITHUB_ENV
+            # Default for older versions
+            echo "go_version=1.20.0" >> $GITHUB_OUTPUT
           fi
-
-      # Step 4: Build sing-box
-      - name: Build sing-box
+          
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+      
+      - name: Update Go version if needed
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ steps.parse-version.outputs.go_version }}
+          check-latest: true
+      
+      - name: Build sing-box for ${{ matrix.os }} with ${{ matrix.tag-set }} tags
+        env:
+          GOOS: ${{ matrix.os }}
+          GOARCH: amd64
+          TAGS: ${{ matrix.tags }}
         run: |
-          GOOS=${{ matrix.os }} GOARCH=amd64 go build -tags "${{ env.tags }}" -o sing-box-${{ matrix.os }}-${{ matrix.tags }} ./cmd/sing-box
-
-      # Step 5: Archive the binary
-      - name: Archive binary
+          # Convert comma-separated tags to space-separated for Go build
+          GO_TAGS=$(echo $TAGS | tr ',' ' ')
+          
+          # Build the binary
+          go build -v -tags "$GO_TAGS" -o ${{ matrix.output }}${{ matrix.ext }} ./cmd/sing-box
+      
+      - name: Rename output file
         run: |
-          if [ "${{ matrix.os }}" == "windows" ]; then
-            zip sing-box-${{ matrix.os }}-${{ matrix.tags }}.zip sing-box-${{ matrix.os }}-${{ matrix.tags }}
-          else
-            tar -czf sing-box-${{ matrix.os }}-${{ matrix.tags }}.tar.gz sing-box-${{ matrix.os }}-${{ matrix.tags }}
-          fi
-
-      # Step 6: Upload artifact
+          mv ${{ matrix.output }}${{ matrix.ext }} sing-box-${{ matrix.os }}-${{ matrix.tag-set }}${{ matrix.ext }}
+        
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sing-box-${{ matrix.os }}-${{ matrix.tags }}
-          path: sing-box-${{ matrix.os }}-${{ matrix.tags }}.*
+          name: sing-box-${{ matrix.os }}-${{ matrix.tag-set }}
+          path: sing-box-${{ matrix.os }}-${{ matrix.tag-set }}${{ matrix.ext }}
 
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Download all artifacts
-      - name: Download artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
           pattern: my-artifact-*
           merge-multiple: true
-
-      # Step 2: Create a release
-      - name: Create Release
+        
+      - name: Create release
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.event.inputs.version }}
-          release_name: Release ${{ github.event.inputs.version }}
+          tag_name: ${{ github.event.inputs.version }}-build
+          name: sing-box ${{ github.event.inputs.version }} Build
           draft: false
           prerelease: false
-
-      # Step 3: Upload release assets
-      - name: Upload Release Assets
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}/artifacts/sing-box-${{ matrix.os }}-${{ matrix.tags }}.*
-          asset_name: sing-box-${{ matrix.os }}-${{ matrix.tags }}.*
-          asset_content_type: application/octet-stream
+          files: |
+            sing-box-linux-default/sing-box-linux-default
+            sing-box-linux-all/sing-box-linux-all
+            sing-box-windows-default/sing-box-windows-default.exe
+            sing-box-windows-all/sing-box-windows-all.exe
