--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -91,6 +91,20 @@ jobs:
         cd ..
 
     - name: Upload
+      uses: actions/upload-artifact@v4
+      with:
+        name: sing-box
+        path: |
+          sing-box-linux
+          sing-box-linux-CGO
+          sing-box-linux-all
+          sing-box-linux-CGO-all
+          sing-box-windows.exe
+          sing-box-windows-CGO.exe
+          sing-box-windows-all.exe
+          sing-box-windows-CGO-all.exe
+
+    - name: Release
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.event.inputs.sing_version }}-build
