--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,13 +1,10 @@
-name: Build and Release sing-box
+name: Build sing-box
 
 permissions:
   contents: write
 
 env:
-  LINUX: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GOAMD64=v1
-  LINUX_CGO: CGO_ENABLED=1 GOOS=linux GOARCH=amd64 GOAMD64=v1
-  WINDOWS: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 GOAMD64=v1
-  WINDOWS_CGO: CGO_ENABLED=1 GOOS=windows GOARCH=amd64 GOAMD64=v1
+  GO_VERSION: ^1.23
   TAG_DEFAULT: with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api
   TAG_ALL: with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api,with_v2ray_api,with_grpc
 
@@ -17,92 +14,83 @@ on:
       sing_version:
         description: "sing-box version to build (e.g., v1.11.4)"
         required: true
-        default: 'latest'
+        default: "dev-next"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [linux, windows]
+        cgo: [0, 1]
+        tags: [TAG_DEFAULT, TAG_ALL]
 
     steps:
-    - name: Setup Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: ^1.23
-        cache: false
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
 
-    - name: git clone
-      run: |
-        git clone -b ${{ github.event.inputs.sing_version }} https://github.com/SagerNet/sing-box
+      - name: Clone sing-box
+        uses: actions/checkout@v4
+        with:
+          repository: SagerNet/sing-box
+          ref: ${{ github.event.inputs.sing_version }}
+          path: sing-box
 
-    - name: Build Linux with default tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.LINUX }}
-        go build -tags ${{ env.TAG_DEFAULT }} -v -o sing-box-linux -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+      - name: Build sing-box ${{ matrix.os }} (CGO=${{ matrix.cgo }}) with ${{ matrix.tags }}
+        run: >-
+          set -e
+          cd sing-box
+          export CGO_ENABLED=${{ matrix.cgo }}
+          export GOOS=${{ matrix.os }}
+          export GOARCH=amd64
+          export GOAMD64=v1
+          go build -tags ${{ env[matrix.tags] }} -v -o sing-box-${{ matrix.os }}${{ matrix.cgo == '1' && '-CGO' || '' }}${{ matrix.tags == 'TAG_ALL' && '-all' || '' }} -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version }}' -s -w -buildid=" ./cmd/sing-box
+          cd ..
 
-    - name: Build Linux CGO with default tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.LINUX_CGO }}
-        go build -tags ${{ env.TAG_DEFAULT }}-v -o sing-box-linux-CGO -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sing-box-${{ matrix.os }}${{ matrix.cgo == '1' && '-CGO' || '' }}${{ matrix.tags == 'TAG_ALL' && '-all' || '' }}
+          path: sing-box/sing-box-*
 
-    - name: Build Linux with all tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.LINUX }}
-        go build -tags ${{ env.TAG_ALL }} -v -o sing-box-linux-all -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
 
-    - name: Build Linux CGO with all tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.LINUX_CGO }}
-        go build -tags ${{ env.TAG_ALL }}-v -o sing-box-linux-CGO-all -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+      - name: Create release notes
+        run: |
+          cat > release_notes.md << EOF
+          # sing-box ${{ github.event.inputs.sing_version }} Build
 
-    - name: Build Windows with default tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.WINDOWS }}
-        go build -tags ${{ env.TAG_DEFAULT }} -v -o sing-box-windows.exe -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+          Automated build of sing-box ${{ github.event.inputs.sing_version }}
 
-    - name: Build Windows CGO with default tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.WINDOWS_CGO }}
-        go build -tags ${{ env.TAG_DEFAULT }}-v -o sing-box-windows-CGO.exe -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+          ## Build variants
 
-    - name: Build Windows with all tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.WINDOWS }}
-        go build -tags ${{ env.TAG_ALL }} -v -o sing-box-windows-all.exe -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+          - Standard builds: Default feature set
+          - All builds: All features enabled
+          - CGO builds: Include features requiring CGO
 
-    - name: Build Windows CGO with all tag
-      run: |
-        cd sing-box
-        go env -w ${{ env.WINDOWS_CGO }}
-        go build -tags ${{ env.TAG_ALL }}-v -o sing-box-windows-CGO-all.exe -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version  }}' -s -w -buildid=" ./cmd/sing-box
-        cd ..
+          ## Build Features
 
-    - name: Release
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: ${{ github.event.inputs.sing_version }}-build
-        name: sing-box ${{ github.event.inputs.sing_version }} Build
-        draft: false
-        prerelease: false
-        files: |
-          ${{ github.workspace }}/sing-box/sing-box-linux
-          ${{ github.workspace }}/sing-box/sing-box-linux-CGO
-          ${{ github.workspace }}/sing-box/sing-box-linux-all
-          ${{ github.workspace }}/sing-box/sing-box-linux-CGO-all
-          ${{ github.workspace }}/sing-box/sing-box-windows.exe
-          ${{ github.workspace }}/sing-box/sing-box-windows-CGO.exe
-          ${{ github.workspace }}/sing-box/sing-box-windows-all.exe
-          ${{ github.workspace }}/sing-box/sing-box-windows-CGO-all.exe
+          **Default tag includes:** ${{ env.TAG_DEFAULT }}
+
+          **All tag includes:** ${{ env.TAG_ALL }}
+          EOF
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.event.inputs.sing_version }}-build
+          name: sing-box ${{ github.event.inputs.sing_version }} Build
+          body_path: release_notes.md
+          draft: false
+          prerelease: false
+          files: artifacts/**/*
