--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,10 +1,9 @@
-name: Build sing-box
+name: Build and Release sing-box
 
 permissions:
   contents: write
 
 env:
-  GO_VERSION: ^1.23
   TAG_DEFAULT: with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api
   TAG_ALL: with_gvisor,with_reality_server,with_quic,with_utls,with_ech,with_dhcp,with_wireguard,with_acme,with_clash_api,with_v2ray_api,with_grpc
 
@@ -12,87 +11,123 @@ on:
   workflow_dispatch:
     inputs:
       sing_version:
-        description: "sing-box version to build (e.g., v1.11.4)"
+        description: "sing-box version to build (e.g., v1.11.4 or 'latest')"
         required: true
-        default: "dev-next"
+        default: 'dev-next'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [linux, windows]
-        cgo: [0, 1]
-        tags: [TAG_DEFAULT, TAG_ALL]
 
     steps:
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+    - name: Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ^1.23
+        cache: true # Enabling cache for better performance
 
-      - name: Clone sing-box
-        run: |
-          git clone -b ${{ github.event.inputs.sing_version }} https://github.com/SagerNet/sing-box
-          cd sing-box
-          ACTUAL_VERSION=$(git describe --tags --always)
-          echo "ACTUAL_VERSION=${ACTUAL_VERSION}" >> $GITHUB_ENV
-          echo "Using version: ${ACTUAL_VERSION}"
-          cd ..
+    - name: Install dependencies for CGO
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcc libc-dev
 
-      - name: Build sing-box ${{ matrix.os }} (CGO=${{ matrix.cgo }}) with ${{ matrix.tags }}
-        run: >-
-          set -e
-          cd sing-box
-          export CGO_ENABLED=${{ matrix.cgo }}
-          export GOOS=${{ matrix.os }}
-          export GOARCH=amd64
-          export GOAMD64=v1
-          go build -tags ${{ env[matrix.tags] }} -v -o sing-box-${{ matrix.os }}${{ matrix.cgo == '1' && '-CGO' || '' }}${{ matrix.tags == 'TAG_ALL' && '-all' || '' }} -trimpath -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ github.event.inputs.sing_version }}' -s -w -buildid=" ./cmd/sing-box
-          cd ..
+    - name: Clone repository
+      run: |
+        git clone -b ${{ github.event.inputs.sing_version }} https://github.com/SagerNet/sing-box || { echo "Failed to clone specified version"; exit 1; }
+        cd sing-box
+        ACTUAL_VERSION=$(go run ./cmd/internal/read_tag)
+        echo "ACTUAL_VERSION=${ACTUAL_VERSION}" >> $GITHUB_ENV
+        echo "Using version: ${ACTUAL_VERSION}"
+        cd ..
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sing-box-${{ matrix.os }}${{ matrix.cgo == '1' && '-CGO' || '' }}${{ matrix.tags == 'TAG_ALL' && '-all' || '' }}
-          path: sing-box/sing-box-*
+    - name: Build Matrix
+      id: build-matrix
+      run: |
+        # Create build directory
+        mkdir -p builds
+        cd sing-box
+        
+        # Define build configurations
+        declare -A configs=(
+          ["linux"]="CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GOAMD64=v1"
+          ["linux-cgo"]="CGO_ENABLED=1 GOOS=linux GOARCH=amd64 GOAMD64=v1"
+          ["windows"]="CGO_ENABLED=0 GOOS=windows GOARCH=amd64 GOAMD64=v1"
+          ["windows-cgo"]="CGO_ENABLED=1 GOOS=windows GOARCH=amd64 GOAMD64=v1"
+        )
+        
+        declare -A tags=(
+          ["default"]="${{ env.TAG_DEFAULT }}"
+          ["all"]="${{ env.TAG_ALL }}"
+        )
+        
+        # Perform builds
+        for platform in "${!configs[@]}"; do
+          for tag_type in "${!tags[@]}"; do
+            echo "Building ${platform} with ${tag_type} tags"
+            
+            # Set extension based on platform
+            ext=""
+            if [[ $platform == *"windows"* ]]; then
+              ext=".exe"
+            fi
+            
+            # Set output filename
+            output_name="sing-box-${platform}"
+            if [[ $tag_type == "all" ]]; then
+              output_name="${output_name}-all"
+            fi
+            
+            # Build command
+            env ${configs[$platform]} go build \
+              -tags "${tags[$tag_type]}" \
+              -v -o "../builds/${output_name}${ext}" \
+              -trimpath \
+              -ldflags "-X 'github.com/sagernet/sing-box/constant.Version=${{ env.ACTUAL_VERSION }}' -s -w -buildid=" \
+              ./cmd/sing-box
+            
+            # Check build success
+            if [ $? -ne 0 ]; then
+              echo "::error::Build failed for ${platform} with ${tag_type} tags"
+              exit 1
+            fi
+          done
+        done
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
+    - name: Create release notes
+      run: |
+        cat > release_notes.md << EOF
+        # sing-box ${{ env.ACTUAL_VERSION }} Build
+        
+        Automated build of sing-box ${{ env.ACTUAL_VERSION }}
+        
+        ## Build variants
+        
+        - Standard builds: Default feature set
+        - All builds: All features enabled
+        - CGO builds: Include features requiring CGO
+        
+        ## Build Features
+        
+        **Default tag includes:** ${{ env.TAG_DEFAULT }}
+        
+        **All tag includes:** ${{ env.TAG_ALL }}
+        
+        Generated on $(date -u)
+        EOF
 
-      - name: Create release notes
-        run: |
-          cat > release_notes.md << EOF
-          # sing-box ${{ github.event.inputs.sing_version }} Build
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: sing-box-builds
+        path: builds/
 
-          Automated build of sing-box ${{ env.ACTUAL_VERSION }}
-
-          ## Build variants
-
-          - Standard builds: Default feature set
-          - All builds: All features enabled
-          - CGO builds: Include features requiring CGO
-
-          ## Build Features
-
-          **Default tag includes:** ${{ env.TAG_DEFAULT }}
-
-          **All tag includes:** ${{ env.TAG_ALL }}
-          EOF
-
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.event.inputs.sing_version }}-build
-          name: sing-box ${{ github.event.inputs.sing_version }} Build
-          body_path: release_notes.md
-          draft: false
-          prerelease: false
-          files: artifacts/**/*
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: ${{ env.ACTUAL_VERSION }}-build
+        name: sing-box ${{ env.ACTUAL_VERSION }} Build
+        body_path: release_notes.md
+        draft: false
+        prerelease: false
+        files: |
+          builds/*
